tests/libdef_scoped_class_identity/foo_lib.js
declare class Foo {} // error: libdef-override
